tests/cmp/record-pat-dotdot-as-field.golden
Parse Error:
tests/cmp/record-pat-dotdot-as-field.trp:3:13: parse error
  3 |     val {.. = x, b} = r
    |             ^
  unexpected '='
  expected '}'

